# mining-quality-kedro

./: README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: 01_eda_raw.ipynb
src/mining_quality_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/mining_quality_kedro/pipelines/data_processing/: nodes.py  pipeline.py
src/mining_quality_kedro/pipelines/data_science/: nodes.py  pipeline.py
src/mining_quality_kedro/pipelines/mining_quality/: nodes.py  pipeline.py
src/mining_quality_kedro/pipelines/reporting/: nodes.py  pipeline.py
tests/pipelines/data_science/: test_pipeline.py
